@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-16T16:35:48Z",
+  "timestamp" : "2022-09-17T08:30:33Z",
   "count_outdated" : 785,
   "uniques_outdated" : 410,
-  "count" : 803,
-  "uniques" : 421,
+  "count" : 804,
+  "uniques" : 422,
   "clones" : [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -77,6 +77,13 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
