@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 2,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
